--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -1,7 +1,31 @@
 {% extends "base.html" %}
-{% block head %}Task 1{% endblock %}
+{% block head %}About Us{% endblock %}
 
 {% block body %}
+<link rel="stylesheet" href="/static/Css/about.css">
+<h1>About Us</h1>
+<div class="section-1">
+    <div class="image-container">
+        <img src="/static/images/uriel-soberanes-oMvtVzcFPlU-unsplash.jpg" alt="About Us Image">
+    </div>
+    <div class="text-container">
+        <h2>Who We are</h2>
+         <p>
+            We’re Riget Zoo Adventures, a place built to protect wildlife and bring people closer to nature. 
+            Our team cares for animals every day, supports conservation projects, and creates fun, educational experiences for visitors of all ages. 
+            We’re here to keep animals safe, teach the community, and make every visit memorable.
+         </p>
+    </div>
+</div>
+<div class="section-2">
+    <div class="text-container">
+        <h2>Our Values</h2>
+         <p>
+            Our mission is simple: care for animals the right way, protect the natural world, and help people understand why wildlife matters. 
+            From endangered species breeding programmes to hands-on learning sessions, everything we do is built around respect for animals and the ecosystems they come fr
+         </p>
+    </div>
 
+</div>
 
 {% endblock %}
