--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -1,7 +1,32 @@
 {% extends "base.html" %}
-{% block head %}Task 1{% endblock %}
+{% block head %}Privacy Policy{% endblock %}
 
 {% block body %}
+<link rel="stylesheet" href="/static/Css/privacy.css">
+<h1>Privacy Policy</h1>
+<section clacss="privacy-section">
+    <h2>Effective Date: 21 November 2025 </h2>
+    <h2>Last Updated: 21 November 2025</h2>
+    <p>Welcome to Riget Zoo Adventures! Your privacy is important to us. This Privacy Policy explains how we collect, use, and protect your personal information when you visit our website, 
+        register for zoo adventures, or interact with our services</p>
+    <h3>1. Information We Collect</h3>
+        <p>We may collect the following types of information:</p>
+        <p>Personal Information: Name, email address, phone number, and login credentials when you register or log in.</p>
+        <p>Usage Data: Pages visited, time spent on site, browser type, and device information.</p>
+        <p>Cookies & Tracking Technologies: To enhance your experience and analyze site traffic.</p>
+    <h3>2. How We Use Your Information</h3>
+    <p>We use your data to:Provide access to your account and adventure bookings. Improve website functionality and user experience. 
+        Send updates, newsletters, or promotional offers (only with your consent). Ensure site security and prevent fraud</p>
 
+    <p>How We Protect Your Data:  Encrypted connections (SSL), Secure servers and firewalls and Limited access to personal data by authorized personnel only</p>
+    <p>Sharing Your Information, We may share it only: With trusted service providers who help us operate the site (e.g., hosting, analytics, payment). If required by law or to protect our legal rights.</p>
 
+    <p>Children’s Privacy: Our website is not intended for children under 13. We do not knowingly collect personal data from minors without parental consent.</p>
+
+    <h3>Your Choices & Rights</h3>
+    <p>You have the right to:Access, update, or delete your personal information,Opt out of marketing communications. Request a copy of the data we hold about you.</p>
+    <h3>Changes to This Privacy Policy</h3>
+    <p>We may update this policy periodically. We will notify you of any significant changes by posting the new policy on this page with an updated "Last Updated" date.</p>
+    <p>To exercise these rights, contact us at <a href="mailto:privacy@rigetzoo.com">privacy@rigetzoo.com</a>.</p>
+</section>
 {% endblock %}
