--- a/templates/register.html
+++ b/templates/register.html
@@ -3,5 +3,27 @@
 
 {% block body %}
 
+<link rel="stylesheet" href="/static/Css/register.css">
+<div class="register-container">
+    <h2>Register</h2>
+    <form id="register-form" method="POST" action="{{ url_for('register') }}">
+        <input type="text" id="username" name="username" placeholder="Name" required>
+        <input type="email" id="email" name="email" placeholder="Email" title="Email" required>
+        <input type="text" id="phone" name="phone" placeholder="Phone Number" required>
+        <label for="dob">D.O.B</label>
+        <input type="date" id="dob" name="dob" placeholder="Date of Birth" required>
+        <input type="text" id="address" name="address" placeholder="Address" required>
+        <input type="password" id="password" name="password" placeholder="Password" required>
+        <div id="passwordMessage" style="font-size:0.9em; margin-top:5px;"></div>
+        <input type="password" id="confirm_password" name="confirm_password" placeholder="Confirm Password" required >
+        <div id="error-container" style="display:none; color:red; margin-top:10px;"></div>
 
+        <button type="submit">Register</button>
+    </form>
+
+    {% if error %}
+    <p class="error">{{ error }}</p>
+    {% endif %}
+</div>
+<script src="/static/Js/register.js"></script>
 {% endblock %}
