--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,6 +2,11 @@
 {% block head %}Task 1{% endblock %}
 
 {% block body %}
-
+<link rel="stylesheet" href="/static/Css/dashboard.css">
+<div class="header-card">
+        <div>
+            <h1>Hi, {{ Name }}!</h1>
+        </div>
+    </div>
 
 {% endblock %}
