--- a/templates/register.html
+++ b/templates/register.html
@@ -2,8 +2,20 @@
 {% block head %}Task 1{% endblock %}
 
 {% block body %}
-
 <link rel="stylesheet" href="/static/Css/register.css">
+<style>
+    /* General Styles */
+    body {
+        font-family: Arial, sans-serif;
+        background-image: url(/static/images/rob-potter-Jt16Nz5wRJY-unsplash.jpg);
+        background-size: cover;
+        background-position: center;
+    }
+    flash-message {
+        color: red;
+        margin-top: 10px;
+    }
+</style>
 <div class="register-container">
     <h2>Register</h2>
     <form id="register-form" method="POST" action="{{ url_for('register') }}">
@@ -12,13 +24,17 @@
         <input type="text" id="phone" name="phone" placeholder="Phone Number" required>
         <label for="dob">D.O.B</label>
         <input type="date" id="dob" name="dob" placeholder="Date of Birth" required>
-        <input type="text" id="address" name="address" placeholder="Address" required>
+        <input type="text" name="address" id="address" placeholder="Address" required>
         <input type="password" id="password" name="password" placeholder="Password" required>
-        <div id="passwordMessage" style="font-size:0.9em; margin-top:5px;"></div>
+        <div id="passwordMessage"></div>
         <input type="password" id="confirm_password" name="confirm_password" placeholder="Confirm Password" required >
-        <div id="error-container" style="display:none; color:red; margin-top:10px;"></div>
-
-        <button type="submit">Register</button>
+        <div id="error-container"></div>
+        <div class="what-up">
+            <p>Already have an account? <a href="{{ url_for('login') }}">Login</a></p>
+            <button type="submit">Register</button>
+        </div>
+        </div>
+        
     </form>
 
     {% if error %}
